[tool.poetry]
name = "py-meta-utils"
version = "0.8.0"
description = "Metaclass and metaprogramming utilities for Python"
authors = ["Brian Cappello <briancappello@gmail.com>"]
readme = "README.md"
include = ["*.md"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.docs.dependencies]
sphinx-material = "^0.0.36"
m2r = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
tox = "^4.12.1"
mypy = "^1.8.0"
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "docs",
]

[tool.black]
line-length = 90
target-version = ['py310']
preview = true

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_between_types = 1
lines_after_imports = 2
multi_line_output = 3
